BW4T3 Manual updated: replaced incorrect files and added missing files

--- a/doc/Deliverables/BW4Tv3Manual/Introduction/introduction.tex
+++ b/doc/Deliverables/BW4Tv3Manual/Introduction/introduction.tex
@@ -1,1 +1,2 @@
 \chapter{Introduction}
+This document is the user manual for the latest version of the Blocks Worlds for Teams (BW4Tv3) environment. In this manual you can find all the new changes and features in BW4T. In Chapter 2 we discuss the structure of BW4Tv3. Here the new structure is explained and we discuss the changes made to the server, why we chose for these changes and some concerns we have. We also discuss the changes between the old and new maps and the benefits and disadvantages these changes have and the backwards compatibility. In Chapter 3 we discuss the new features added to BW4Tv3 and how to use these features. Here it is explained how a user can create a new map, how the user can create scenarios and how the user can control a bot. In Chapter 4 we discuss the transferability of the BW4T environment. We first explain the refactoring that was done to the code, after which we discuss the new features.
