--- a/doc/Deliverables/BW4Tv3Manual/NewFeatures/newfeatures.tex
+++ b/doc/Deliverables/BW4Tv3Manual/NewFeatures/newfeatures.tex
@@ -1,4 +1,5 @@
-\chapter{New features}
+\chapter{New Features}
 \input{NewFeatures/envstore}
 \input{NewFeatures/se}
+\input{NewFeatures/capabilities}
 \input{NewFeatures/hpg}
