--- a/doc/Deliverables/BW4Tv3Manual/Structure/structure.tex
+++ b/doc/Deliverables/BW4Tv3Manual/Structure/structure.tex
@@ -2,4 +2,4 @@
 \input{Structure/newstructure}
 \input{Structure/serverchanges}
 \input{Structure/mapscomparison}
-\input{Structure/backwardscompatibility}
+%\input{Structure/backwardscompatibility}
