--- a/doc/Deliverables/BW4Tv3Manual/Transferability/hpg.tex
+++ b/doc/Deliverables/BW4Tv3Manual/Transferability/hpg.tex
@@ -1,1 +1,7 @@
 \section{Human player GUI}
+The Human Player GUI gives a human the possibility to control an agent in the environment. This was an already existing feature in the bw4t-client, but the customers had some additional wishes.
+Most of these wishes have already been fulfilled. For the wishes that haven't been fulfilled, it will be specifically stated. They for instance wanted the message box for the agents and e-partners to be separated. The e-partner message box should only be shown when the human has picked up an e-partner. It also had to be clear with which bot you are currently communicating.
+Another aspect was about coming up with a clever solution for avoiding a long list of rooms when having an option list with rooms. We didn't come up with a good solution to this, but one possibility would be to have an option to type in the room (instead of selecting it with the mouse).
+They also wanted the remaining battery percentage to be shown somewhere. Furthermore they wanted options that weren't possible (such as picking up a block when having the gripper disabled) to not be displayed. During a demo we were also told that the blocks were quite small (and thus hard to click) and the same goes for the map. One thing that we did as a result of this, was to make it possible to zoom in and out and to make it possible to use the mouse to scroll over the map. We didn't change the block size though. Partly because this would mean a change in the path finding algorithm.
+Because the customer also wanted to make the system more realistic, they asked that the e-partner could only be seen by humans that were close to it.
+A last wish - of which they didn't expect us to finish it but to mention it in the report - was implementing failing actions. So failing to pick up a block, seeing the wrong color of a block or dropping a block while walking. It should be possible to let the user specify the chance in  that actions have to fail.
