--- a/doc/Deliverables/BW4Tv3Manual/Transferability/se.tex
+++ b/doc/Deliverables/BW4Tv3Manual/Transferability/se.tex
@@ -1,1 +1,6 @@
 \section{Scenario editor}
+The customer wanted us to create a Scenario Editor that generates MAS files. The MAS files should be able to be used to run various types of simulation runs. In the Scenario Editor they wanted to be able to add a number of bots. Per bot they wanted to be able to change the bot type, change the capabilities of the bot and change how the bot will be controlled (by an agent file or by a human player). They also wanted to have a Bot Store in which the capabilities of bots can be managed and different types of bots can be created, including pre-configured bots and e-partners.
+
+For the design we drew up some prototypes which were shown to the customer for some feedback. The feedback they gave us was that they wanted some buttons to be positioned differently, they wanted two tables instead of just one and they also wanted us to add an extra column in the tables. They also had questions about a 'use GOAL' option we had included in the editor which we discussed and decided to leave that option out, because it wouldn't make a big difference and it could still be changed manually. We then started implementing the GUI. When we finished them, we showed them to the customer again and they agreed on the design.
+
+Even though the customer initially wanted the Bot Store to contain e-partners as well, we decided against it. We figured making a separate E-partner Store would be more clear for the users. If we would have added e-partners to the Bot Store as well, the store would have too many options and the window would be cluttered. We showed them the designs, and they agreed with it.
