--- a/doc/Deliverables/BW4Tv3Manual/title.tex
+++ b/doc/Deliverables/BW4Tv3Manual/title.tex
@@ -50,7 +50,7 @@ by
         & Martin Jorn Rogalla  & 4173635\\
         & Jan Giesenberg       & 4174720\\
         & Wendy Bolier         & 4133633\\
-        & Joost Rotheweiler    & 4246551\\
+        & Joost Rothweiler    & 4246551\\
         & Joop Aué             & 4139534\\
         & Katia Asmoredjo      & 4091760\\
         & Sander Liebens       & 4207750\\
